1.2.1i5
    Checks & Agents
    * Linux Agent, diskstat: Now supporting /dev/emcpower* devices (Thanks to Claas Rockmann-Buchterkirche)
    * FIX: winperf_processor: Showing 0% on "cmk -nv" now instead of 100%
    * FIX: win_dhcp_pools: removed faulty output on non-german windows 2003 servers 
           with no dhcp server installed (Thanks to Mathias Decker)

    Multisite
    * FIX: Fixed rendering of dashboard globes in opera

1.2.1i4:
    Core:
    * Better exception handling when executing "Check_MK"-Check. Printing python
      exception to status output and traceback to long output now.
    * Added HOSTTAGS to notification macros which contains all Check_MK-Tags
      separated by spaces
    * Output better error message in case of old inventory function
    * Do object cache precompile for monitoring core on cmk -R/-O
    * Avoid duplicate verification of monitoring config on cmk -R/-O
    * FIX: Parameter --cleanup-autochecks (long for -u) works now like suggested in help
    * FIX: Added error handling when trying to --restore with a non existant file

    Notifications:
    * Fix flexible notifications on non-OMD systems
    
    Checks & Agents:
    * Linux Agent, mk_postgres: Supporting pgsql and postgres as user
    * Linux Agent, mk_postgres: Fixed database stats query to be compatible
      with more versions of postgres
    * apache_status: Modified to be usable on python < 2.6 (eg RHEL 5.x)
    * apache_status: Fixed handling of PIDs with more than 4 numbers
    * Add: New Check for Rittal CMC PSM-M devices
    * Smart plugin: Only use relevant numbers of serial
    * Add: ibm_xraid_pdisks - new check for agentless monitoring of disks on IBM SystemX servers.
    * Add: hp_proliant_da_cntlr check for disk controllers in HP Proliant servers
    * Add: Check to monitor Storage System Drive Box Groups attached to HP servers
    * Add: check to monitor the summary status of HP EML tape libraries